syntax = "proto3";

message EnrichMessage {
  string endpoint_id = 1;
  string id = 2;
  string user_id = 3;
  string index = 4;
}
